# clove

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.huggingface  Dockerfile.pypi  LICENSE  MANIFEST.in  Makefile  README.md  README_en.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-publish.yml  docker-publish.yml
app/: main.py
app/api/: accounts.py  claude.py  main.py  settings.py  statistics.py
app/api/routes/: accounts.py  claude.py  settings.py  statistics.py
app/core/: account.py  calude_session.py  claude_session.py  config.py  error_handler.py  exceptions.py  http_client.py  static.py
app/dependencies/: auth.py
app/locales/: en.json  zh.json
app/models/: account.py  claude.py  internal.py  streaming.py
app/processors/: __init__.py  base.py  claude.py  pipeline.py
app/processors/claude_ai/: __init__.py  claude_api_processor.py  claude_web_processor.py  context.py  event_parser_processor.py  message_collector_processor.py  model_injector_processor.py  non_streaming_response_processor.py  pipeline.py  stop_sequences_processor.py  streaming_response_processor.py  tavern_test_message_processor.py  token_counter_processor.py  tool_call_event_processor.py  tool_result_processor.py
app/services/: account.py  cache.py  i18n.py  oauth.py  session.py  tool_call.py
app/services/event_processing/: __init__.py  event_parser.py  event_serializer.py
app/utils/: logger.py  messages.py  retry.py
scripts/: build_wheel.py
