[project]
name = "clove"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.11.4",
    "fastapi>=0.115.14",
    "json5>=0.12.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "uvicorn>=0.35.0",
]
